# Geort

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  checkkeypoints.py  environment.yml  requirements.txt  setup.py  testEnv.py
assets/xhand_right/: CMakeLists.txt  package.xml
assets/xhand_right/config/: joint_names_xhand_right.yaml
assets/xhand_right/launch/: display.launch  gazebo.launch
assets/xhand_right/meshes/: right_hand_back_link.STL  right_hand_ee_link.STL  right_hand_index_bend_link.STL  right_hand_index_rota_link1.STL  right_hand_index_rota_link2.STL  right_hand_index_rota_tip.STL  right_hand_index_rotaback_link1.STL  right_hand_index_rotaback_link2.STL  right_hand_link.STL  right_hand_mid_link1.STL  right_hand_mid_link2.STL  right_hand_mid_tip.STL  right_hand_midback_link1.STL  right_hand_midback_link2.STL  right_hand_pinky_link1.STL  right_hand_pinky_link2.STL  right_hand_pinky_tip.STL  right_hand_pinkyback_link1.STL  right_hand_pinkyback_link2.STL  right_hand_ring_link1.STL  right_hand_ring_link2.STL  right_hand_ring_tip.STL  right_hand_ringback_link1.STL  right_hand_ringback_link2.STL  right_hand_thumb_bend_link.STL  right_hand_thumb_rota_link1.STL  right_hand_thumb_rota_link2.STL  right_hand_thumb_rota_tip.STL  right_hand_thumb_rotaback_link1.STL  right_hand_thumb_rotaback_link2.STL
assets/xhand_right/urdf/: xhand_right.csv  xhand_right.urdf
data/: human_alex.npy  rot_alex.npy
geort/: __init__.py  dataset.py  export.py  formatter.py  loss.py  model.py  trainer.py
geort/mocap/manus_client/: .gitignore  CMakeLists.txt  colcon_build.sh  package.xml
geort/mocap/manus_client/include/: ManusSDK.h  ManusSDKTypeInitializers.h  ManusSDKTypes.h
geort/mocap/manus_client/lib/: libaddress_sorting.so.9  libcrypto.so.1.1  libgpr.so.9  libgrpc++.so.1  libgrpc.so.9  libprotobuf.so.22  libupb.so.9
geort/mocap/manus_client/src/: ClientPlatformSpecific.cpp  ClientPlatformSpecific.hpp  ClientPlatformSpecificTypes.hpp  SDKMinimalClient.cpp  SDKMinimalClient.hpp  right_hand_ros.cpp  test_right.cpp  tracker_data_print.cpp
scripts/: check_hand_config.py  check_urdf_inertia.py  fix_urdf_inertia.py  rotData.py  strip_urdf_to_kinematic.py  visualize_fk.py  (+3 more)
(+19 files in other folders)
